--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,6 @@ Create ExtJS/Rails reusable components with minimum effort.
 Example
 =======
 
-See tutorials on http://blog.writelesscode.com
+See the tutorials on http://blog.writelesscode.com
 
 Copyright (c) 2008 Sergei Kozlov, released under the MIT license
