--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.1.1
+Inter-widget dependencies code reworked
+JS-class code generation code slightly reworked
+
 v0.1.0.2
 Meta: fix outdated Manifest
 
