--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.2.3
+FeedbackGhost will show the feedback on the top of the screen independent of the page scrolling.
+
 v0.2.2
 js_ext_config instance method added for overwriting
 Multiuser support
