--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ v0.2.6
 FeedackGhost is now capable of displaying multiple flash messages.
 Dependencies slightly refactored.
 An informative exception added to Base#aggregatee_instance.
+JS-level inheritance enabled.
 Code readability improvements.
 
 v0.2.5
