--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,14 @@
+v0.2.7
+QuickTips get initialized now, as otherwise Ext 2.2.1 doesn't properly destroy() BoxComponents for me.
+
 v0.2.6
 FeedackGhost is now capable of displaying multiple flash messages.
 Dependencies slightly refactored.
 An informative exception added to Base#aggregatee_instance.
 JS-level inheritance enabled.
+Work-around for the problem with Ext 2.2.1 in loadWidget.
+Events "<action_id>click" added to the widgets along with the actions.
+aggregatee_missing method added to Netzke::Base - called when a non-existing aggregate of a widget is tried to be invoked
 Code readability improvements.
 
 v0.2.5
