--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.3.0
+Actions, toolbars and tools reworked for easier configuration.
+Menus introduced (based on actions).
+Major code clean-up.
+
 v0.2.8
 Support for extra javascripts and stylesheets per widget.
 
