--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.4.0
+2009-07-14
+Refactor: complete rewrite of the client-server communication mechanisms.
+
 v0.3.2
 2009-06-05
 Netzke doesn't overwrite session[:user] anymore to not cause authentication-related problems.
