towards v0.4.0, see changelog

--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
 * Re-factor JS-level inheritance mechanisms (2009-07-5 why?)
-* Get rid of the initial_config method, because the same functionality maybe achieved by overwriting the initialize method
+* Get rid of the default_config method, because the same functionality maybe achieved by overwriting the initialize method
