--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,14 +1,15 @@
 = v0.4.4
+2009-10-12
 * API change: default handlers for actions and tools are now supposed to be prefixed with "on". E.g.: if you declare an action named <tt>clear_table</tt>, the handler must be called (in Ruby) <tt>on_clear_table</tt> (mapped to <tt>onClearTable</tt> in JavaScript).
 * Internal: the JavaScript instance now knows if persistent config is enabled (by checking this.persistentConfig).
 * Fix: solving the "Node cannot be inserted at the specified point in the hierarchy" problem by being more strict with duplicated IDs for elements on the same page.
 * Fix: Ext 3.0 compatibility.
 * Impr: <tt>getChildWidget</tt> now allows referring to a widget like this: "parent__parent__some_widget__some_nested_widget"
 
-v0.4.3
+= v0.4.3
 Fix: reworking loadAggregatee()-related code, closing a security flaw when a malicious browser could send any configuration options to instantiate the widget being loaded.
 
-v0.4.2
+= v0.4.2
 2009-09-11
 Fix: the API call (at the JavaScript side) was ignoring the callback parameter.
 Impr: if the array of API points is empty, it's not added into js_config anymore.
@@ -16,23 +17,23 @@ New: new testing widgets in netzke_controller.
 Fix: extra CSS includes now take effect.
 New: Support for masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.
 
-v0.4.1
+= v0.4.1
 2009-09-06
 Version bumb to force github rebuild the gem (Manifest is now included)
 
-v0.4.0
+= v0.4.0
 2009-09-05
 Major refactoring.
 
-v0.3.2
+= v0.3.2
 2009-06-05
 Netzke doesn't overwrite session[:user] anymore to not cause authentication-related problems.
 
-v0.3.1
+= v0.3.1
 2009-05-07
 Fix: persistent_config_manager can now be set to nil, and it will work fine
 
-v0.3.0
+= v0.3.0
 2009-05-07
 Refactor: got rid of NetzkeLayout model, now all layouts are stored in netzke_preferences
 New: persistent_config now has a method for_widget that accepts a block
@@ -43,27 +44,27 @@ New: weak_children_config and strong_children_config can now be declared by a wi
 Fix: (degradation) flash message is now shown again in case of erroneous attempt to load a widget
 New: widgets now can check session[:netzke_just_logged_in] and session[:netzke_just_logged_out] automatically set by Netzke after login/logout
 
-v0.2.11
+= v0.2.11
 Introduction of getOwnerWidget()-method to Ext.Component. It provides the Netzke widget this Component belongs to.
 
-v0.2.10
+= v0.2.10
 Removed dependency on 'json' gem.
 Rails v2.3.2 compatibility.
 
-v0.2.9
+= v0.2.9
 Actions, toolbars and tools reworked for easier configuration.
 Menus introduced (based on actions).
 Significant code clean-up.
 Bug fix (nasty one): Ext.widgetMixIn was getting messed up along with dynamic widget loading.
 Must work in IE now.
 
-v0.2.8
+= v0.2.8
 Support for extra javascripts and stylesheets per widget.
 
-v0.2.7
+= v0.2.7
 QuickTips get initialized now, as otherwise Ext 2.2.1 doesn't properly destroy() BoxComponents for me.
 
-v0.2.6
+= v0.2.6
 FeedackGhost is now capable of displaying multiple flash messages.
 Dependencies slightly refactored.
 An informative exception added to Base#aggregatee_instance.
@@ -73,28 +74,28 @@ Events "<action_id>click" added to the widgets along with the actions.
 aggregatee_missing method added to Netzke::Base - called when a non-existing aggregate of a widget is tried to be invoked
 Code readability improvements.
 
-v0.2.5
+= v0.2.5
 Minor code restructuring.
 
-v0.2.4
+= v0.2.4
 Some minor improvements.
 
-v0.2.3
+= v0.2.3
 FeedbackGhost will show the feedback on the top of the screen independent of the page scrolling.
 Ext.Panel#loadWidget will accept null as url to delete the currently loaded widget
 Bug fix: persistent_config works again
 
-v0.2.2
+= v0.2.2
 js_ext_config instance method added for overwriting
 Multiuser support
 Using Rails.logger for logging
 "config"-class method for every class inheriting Netzke::Base - for class-level configurations
 
-v0.2.1
+= v0.2.1
 Fixed the path to ext-base-min.js for production mode.
 Also works in Safari now.
 
-v0.2.0
+= v0.2.0
 * Some re-factoring and redesign. Now simple compound widgets can be created on the fly in the controller
 * Added ext_widget[:quiet] configuration option to suppress widget's feedback
 * Support for extra CSS sources, similar to JS
@@ -105,28 +106,28 @@ v0.2.0
 * Permissions joined js_config
 * Bug fixes
 
-v0.1.4
+= v0.1.4
 Helpers added to facilitate ExtJS/netzke.js inclusion
 The route defined for netzke_controller
 netzke.html.erb-layout is not needed anymore, so not produced by the generator
 Now compliant with Rails' forgery protection
 
-v0.1.3
+= v0.1.3
 Generators fixed
 
-v0.1.2
+= v0.1.2
 Fixed the bug with <widget>_class_definition returning empty string on sequential loading.
 
-v0.1.1.1
+= v0.1.1.1
 Meta: moving from GitHub to RubyForge
 
-v0.1.1
+= v0.1.1
 Inter-widget dependencies code reworked
 JS-class code generation code slightly reworked
 
-v0.1.0.2
+= v0.1.0.2
 Meta: fix outdated Manifest
 
-v0.1.0.1 Meta work: replacing underscore with dash in the name
+= v0.1.0.1 Meta work: replacing underscore with dash in the name
 
-v0.1.0 Initial release
+= v0.1.0 Initial release
