--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,6 +1,7 @@
 = v0.6.0 - EDGE
 * API change: Netzke widget's now should be declared directly in the views instead of controllers.
-* API change: all ExtJS and Netzke JavaScript and styles are now loaded with the help of "netzke_init" helper.
+* API change: all ExtJS and Netzke JavaScript and styles are now loaded with the help of <tt>netzke_init</tt> helper.
+* API change: <tt>persistence_key</tt> option replaces <tt>persistent_config_id</tt> option.
 * Impr: headers in panels in the "config" mode now show the widget's global ID.
 
 = v0.4.5.2 - 2009-11-09
