Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,6 @@
 = v0.5.2 - EDGE
-* New: support for external stylesheets
+* Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
+* New: support for external stylesheets.
 
 = v0.5.1 - 2010-02-26
 * Compatibility with Ext 3.1.1
