--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,4 +1,5 @@
 = v0.5.2 - EDGE
+* Ext 3.2.1
 * Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
 * New: support for external stylesheets.
 * Fix: the "value" column type has been changed to text to prevent migration problems is some cases
