--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+= v0.5.3 - 2010-06-14
+* Fix: Getting rid of deprecation warnings about tasks not sitting in lib.
+
 = v0.5.2 - 2010-06-11
 * Ext 3.2.1
 * Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
