some code cleanup; README update

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,22 +3,20 @@ Create Ext JS + Rails reusable components (widgets) with minimum effort.
 
 This is the bare bones of the Netzke framework. Use it to build your own widgets from scratch. For pre-built widgets (like panels, grids, forms, trees, applications), see the netzke-basepack (http://github.com/skozlov/netzke-basepack) project.
 
-The idea behind the Netzke framework is that it allows you write reusable client/server code. Create a widget, and then embed it (or load it dynamically) into your Ext-based applications or HTML pages. For more info, see the links below.
+The idea behind the Netzke framework is that it allows you write reusable client/server code. Create a widget, and then embed it straight to your Rails' view, load it dynamically into your Ext-based applications, or use them as building blocks for new widgets. For more info, see the links below.
 
 == Instalation
 For the latest ("edge") stuff, install as plugin (recommended!):
 
-    ./script/plugin install git://github.com/skozlov/netzke-core.git
-
-Otherwise, install as gem:
-
-    gem install netzke-core
+    rails plugin install git://github.com/skozlov/netzke-core.git
     
-To generate the migrations for Netzke persistent storage (if you want to use it):
+To generate the migrations for Netzke persistent storage:
 
-    ./script/generate netzke_core
+    rails g netzke:core
 
-Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link).
+Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link):
+
+    ln -s ~/code/sencha/ext-3.2.1 public/extjs
 
 == Usage
 Here's how to embed a Netzke widget into your Rails view.
@@ -27,24 +25,18 @@ Here's how to embed a Netzke widget into your Rails view.
 
     <%= netzke_init %>
     
-2. In config/routes.rb declare the Netzke routes:
+2. In your view use the <tt>netzke</tt> helper to embed a widget. Here's an example showing how to embed a <tt>Netzke::GridPanel</tt>:
 
-    map.netzke
+    <%= netzke :users, :class_name => "GridPanel", :model => "User" %>
     
-3. In your view use the <tt>netzke</tt> helper wherever you want to insert a widget.
-
-    <%= netzke :grid_panel, :model => "User", :columns => [:id, :name, :created_at] %>
-    
-(here we use the GridPanel widget from the netzke-basepack project)
-
 == More info
-Introduction to Netzke framework and wiki: http://github.com/skozlov/netzke
+Netzke website: http://netzke.org
 
-Twitter: http://twitter.com/skozlov
+Live-demo with sample code: http://demo.netzke.org
 
 Tutorials: http://blog.writelesscode.com
 
-Live-demo with sample code: http://netzke-demo.writelesscode.com
+Twitter: http://twitter.com/skozlov
 
 The netzke-basepack project (pre-built full-featured widgets): http://github.com/skozlov/netzke-basepack
 
