--- a/README.rdoc
+++ b/README.rdoc
@@ -37,6 +37,12 @@ Here's how to embed a Netzke widget into your Rails view.
     
 (here we use the GridPanel widget from the netzke-basepack project)
 
+4. When your app is running from a relative web root, i.e. /app, you need to specify it in an initializer:
+
+(config/initializers/netzke.rb)
+Netzke::Base.configure :relative_url_root=>'/app'
+Netzke::Base.configure :icons_uri=>'/app/images/icons'
+
 == More info
 Introduction to Netzke framework and wiki: http://github.com/skozlov/netzke
 
