--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+= v0.5.6 - EDGE
+* Including external CSS fixed
+
 = v0.5.5 - 2010-09-08
 * Merge with pschyska/netzke-core - relative_root_url, jsmin
 * Detecting actions in config now works on any level
